finalizing contextualizing figures

--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -24,7 +24,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(readxl)
 library(did2s)
 library(tidyverse)
-
+library(directlabels)
 ```
 
 
@@ -47,6 +47,57 @@ dfc %>%
   tbl_summary(by = Treat, 
                 statistic = list(all_continuous() ~ "{mean} ({sd})")) %>% 
   add_p()
+
+```
+
+
+
+##  Trends over time
+
+```{r}
+## Plot
+p <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>% 
+  select(`BHCMIS ID`, Zip, Year) %>% 
+  unique() %>% 
+  left_join(clinics.in.zips, by = c("Zip", "Year")) %>%
+  group_by(`BHCMIS ID`, Year) %>%
+  summarise(Clinics = max(Clinics, na.rm = TRUE)) %>%
+  group_by(Year, Clinics) %>% 
+  summarise(Count = n()) %>% 
+  mutate(CompetitorsInArea = factor(ifelse( Clinics < 4, Clinics - 1, "3+"))) %>% 
+  group_by(Year, CompetitorsInArea) %>% 
+  summarise(Count = sum(Count))
+
+
+plot0 <- p %>% 
+  arrange(CompetitorsInArea) %>% 
+  ggplot(aes(x = Year, y = Count, group = CompetitorsInArea, color = CompetitorsInArea)) + ylab("FQHCs") + 
+  geom_point() + geom_line() + theme_tufte_revised() + ggtitle("FQHCs by Number of Rival Clinics") + 
+  geom_dl(label=c(rep("0 Competitors", 25), rep("1 Competitor", 25), rep("2 Competitors", 25), rep("3+ Competitors", 25)), 
+          method = list("last.points", hjust = 1, vjust = c(3, 3.5, 4, -2), cex = 0.75), inherit.aes=T ) + 
+  guides(colour = "none") + ylim(0, 4000)
+
+plot1 <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>% 
+            group_by(Zip, Year) %>% 
+  summarise(Counts = n()) %>% 
+  #summarise(Counts = n_distinct(`Grant Number`)) %>% 
+  ungroup() %>% 
+  group_by(Year, Counts) %>% 
+  summarise(Zips = n()) %>% 
+  mutate(Counts.f = as.factor(ifelse(Counts >= 2, "2+", Counts))) %>% 
+  group_by(Counts.f, Year) %>% 
+  summarise(Zips = sum(Zips)) %>% 
+  #filter(Year >= 2010) %>% 
+  ggplot(aes(x = Year, y = Zips, group = Counts.f, color = Counts.f)) + 
+  geom_point() + geom_line() + theme_tufte_revised() + ggtitle("Zip Codes by Number of FQHC Sites") + 
+  geom_dl(label=c(rep("1 Site", 25), rep("2+ Sites", 25)), method = list("last.points", hjust = 1, vjust = -1, cex = 0.75), inherit.aes=T ) + 
+  guides(colour = "none")
+
+
+p.desc <- ggarrange(plot1, plot0) 
+
+annotate_figure(p.desc, top = text_grob("FQHC Growth and Density by Zip and Clinic, UDS 1996 to 2021", face = "bold", size = 14))
+
 
 ```
 
@@ -116,12 +167,12 @@ df.core %>%
   #filter(name %in% c("Total", "Qcomp", "Altman")) %>% 
   pivot_wider(id_cols = name, names_from = c(Treated, Post), values_from = value) %>% 
   mutate(Unadjusted = (`1_1` - `1_0`) - (`0_1` - `0_0`)) %>% 
-  cbind(did.core) %>% 
-   select(name, `0_0`, `0_1`, `1_0`, `1_1`, Unadjusted, Estimate, `Std. Error`) %>% 
+  cbind(did.core, NiceName = c("Total","Quality Composite","Altman's Z","Sites")) %>% 
+   select(NiceName, `0_0`, `0_1`, `1_0`, `1_1`, Unadjusted, Estimate, `Std. Error`) %>% 
   mutate(Estimate = round(Estimate, 2), 
          `95% CI` = paste(round(Estimate - 1.96 * `Std. Error`, 2), ", ", round(Estimate + 1.96 * `Std. Error`, 2), sep = ""), 
          `% Change` = round(Estimate / `1_0` * 100, 1)) %>% 
-  rename(Outcome = name) %>% 
+  rename(Outcome = NiceName) %>% 
   select(Outcome:Estimate, `95% CI`, `% Change`) %>% 
   kable("html", booktabs = T, col.names = c("Outcome","Pre","Post","Pre","Post","Unadjusted DID","Estimate","95% CI","% Change")) %>% 
   kable_styling(latex_options = c("striped")) %>%
@@ -282,11 +333,12 @@ options(scipen=999)
 
 
 
-data.frame(Subset = sort(rep(1:(length(splits) + 1), 3)),
+plot.profit <- data.frame(Subset = sort(rep(1:(length(splits) + 1), 3)),
       Outcome = rep(c("Total","Quality","Financial"), (length(splits) + 1)),
       Estimate = as.numeric(did.profit[,1]), 
       SD = as.numeric(did.profit[,2])) %>% 
-  mutate(Subset.f = as.factor(Subset)) %>% 
+  #mutate(Subset.f = as.factor(Subset)) %>% 
+  mutate(Subset.f = ifelse(Subset == 2, "Above Average", "Below Average")) %>% 
   ggplot(aes(y = Subset.f, x = Estimate, xmin = Estimate - SD * 1.95, xmax = Estimate + SD * 1.95)) + 
   geom_point() + 
   xlab("Staggered 2-way DID Estimates") + 
@@ -309,8 +361,10 @@ facet_grid(~Outcome, scales= "free_x", switch = 'y', space = "free_y") +
    theme(strip.placement = "outside") +
 #theme(text=element_text(family="Times",size=12, color="black"))+
 theme(panel.spacing = unit(1, "lines")) + 
+  ylab("Stratified by baseline profitability (% of expenses)") + 
   ggtitle("DID Estimates by Baseline Profitiability")
 
+plot.profit
 ```
 
 
@@ -385,7 +439,8 @@ data.frame(Subset = sort(rep(1:(length(splits) + 1), 3)),
       Outcome = rep(c("Total","Quality","Financial"), (length(splits) + 1)),
       Estimate = as.numeric(did.size[,1]), 
       SD = as.numeric(did.size[,2])) %>% 
-  mutate(Subset.f = as.factor(Subset)) %>% 
+  #mutate(Subset.f = as.factor(Subset)) %>% 
+  mutate(Subset.f = ifelse(Subset == 2, "Above Average", "Below Average")) %>% 
   ggplot(aes(y = Subset.f, x = Estimate, xmin = Estimate - SD * 1.95, xmax = Estimate + SD * 1.95)) + 
   geom_point() + 
   xlab("Staggered 2-way DID Estimates") + 
@@ -408,6 +463,7 @@ facet_grid(~Outcome, scales= "free_x", switch = 'y', space = "free_y") +
    theme(strip.placement = "outside") +
 #theme(text=element_text(family="Times",size=12, color="black"))+
 theme(panel.spacing = unit(1, "lines")) + 
+  ylab("Stratified by baseline clinic population size") + 
   ggtitle("DID Estimates by Baseline Size")
 
 ```
@@ -979,11 +1035,11 @@ p.spill <- df.spill2 %>%
   mutate(Dist.rounded = as.numeric(paste(Dist.rounded, 0, sep = ""))) %>% 
   pivot_longer(cols = c( `Locations`:`Hours per Week`)) %>% 
   mutate(`Treated Zips` = Counts_0 / 3) %>% 
-  ggplot(aes(x = Dist.rounded, y = value)) + geom_point(aes(size = `Treated Zips`)) + facet_wrap(~name, scales = "free_y", ncol = 2) + xlim(0, 250) + 
+  ggplot(aes(x = Dist.rounded, y = value)) + geom_point(aes(size = `Treated Zips`)) + facet_wrap(~name, scales = "free_y", ncol = 2) + xlim(0, 200) + 
   xlab("Kilometers to Competitive Zip") + ylab("Unadjusted Difference-in-differences") + theme_tufte_revised() + 
   geom_smooth(method = "lm", se = F, quiet = TRUE, formula = "y ~ x", mapping = aes(weight = `Treated Zips`)) + 
   geom_hline(yintercept=0, linetype = "dashed", color = "grey") + theme(text = element_text(size = 16)) + theme(title = element_text(face = "bold")) + 
-  ggtitle("Figure 4 - Unadjusted DID Estimates by Distance to Competitive Zip")
+  ggtitle("Unadjusted DID Estimates by Distance to Competitive Zip")
 
 
 
